--- a/src/__mainTop.pug
+++ b/src/__mainTop.pug
@@ -43,51 +43,51 @@ mixin mainTop
 
 mixin hideBox
   .mainTop__hideBoxOverlay
-  //- .mainTop__hideContainer
-  .mainTop__hideBox(data-index="menu1")
-    .mainTop__hideBoxInner.colorBox_e
-      .mainTop__hideBoxInnerHeader
-        .mainTop__hideBoxInnerTitle
-          i.icon-menu
-          span Меню
-        .mainTop__hideBoxClose
-          i.icon-close2021
-      .mainTop__hideBoxInnerContent.xScroll2
-        .mainTop__hideBoxInnerContentInner
-          +MenuBottom1__menu 
-  .mainTop__hideBox(data-index="menu2")
-    .mainTop__hideBoxInner.colorBox_e
-      .mainTop__hideBoxInnerHeader
-        .mainTop__hideBoxInnerTitle
-          i.icon-smile
-          span Услуги
-        .mainTop__hideBoxClose
-          i.icon-close2021
-      .mainTop__hideBoxInnerContent.xScroll2
-        .mainTop__hideBoxInnerContentInner
-          +MenuBottom1__serv 
-  .mainTop__hideBox(data-index="menu3")
-    .mainTop__hideBoxInner.colorBox_e
-      .mainTop__hideBoxInnerHeader
-        .mainTop__hideBoxInnerTitle
-          i.icon-question-round
-          span Решить проблему
-        .mainTop__hideBoxClose
-          i.icon-close2021
-      .mainTop__hideBoxInnerContent.xScroll2
-        .mainTop__hideBoxInnerContentInner
-          +MenuBottom1__probl 
-  //- .mainTop__hideBox(data-index="menu4")
-  //-   .mainTop__hideBoxInner.colorBox_e
-  //-     .mainTop__hideBoxInnerHeader
-  //-       .mainTop__hideBoxInnerTitle
-  //-         i.icon-menu
-  //-         span Меню
-  //-       .mainTop__hideBoxClose
-  //-         i.icon-close2021
-  //-     .mainTop__hideBoxInnerContent.xScroll2
-  //-       .mainTop__hideBoxInnerContentInner
-  //-         +MenuBottom1__probl
+    .mainTop__hideContainer
+      .mainTop__hideBox(data-index="menu1")
+        .mainTop__hideBoxInner.colorBox_e
+          .mainTop__hideBoxInnerHeader
+            .mainTop__hideBoxInnerTitle
+              i.icon-menu
+              span Меню
+            .mainTop__hideBoxClose
+              i.icon-close2021
+          .mainTop__hideBoxInnerContent.xScroll2
+            .mainTop__hideBoxInnerContentInner
+              +MenuBottom1__menu 
+      .mainTop__hideBox(data-index="menu2")
+        .mainTop__hideBoxInner.colorBox_e
+          .mainTop__hideBoxInnerHeader
+            .mainTop__hideBoxInnerTitle
+              i.icon-smile
+              span Услуги
+            .mainTop__hideBoxClose
+              i.icon-close2021
+          .mainTop__hideBoxInnerContent.xScroll2
+            .mainTop__hideBoxInnerContentInner
+              +MenuBottom1__serv 
+      .mainTop__hideBox(data-index="menu3")
+        .mainTop__hideBoxInner.colorBox_e
+          .mainTop__hideBoxInnerHeader
+            .mainTop__hideBoxInnerTitle
+              i.icon-question-round
+              span Решить проблему
+            .mainTop__hideBoxClose
+              i.icon-close2021
+          .mainTop__hideBoxInnerContent.xScroll2
+            .mainTop__hideBoxInnerContentInner
+              +MenuBottom1__probl 
+      //- .mainTop__hideBox(data-index="menu4")
+      //-   .mainTop__hideBoxInner.colorBox_e
+      //-     .mainTop__hideBoxInnerHeader
+      //-       .mainTop__hideBoxInnerTitle
+      //-         i.icon-menu
+      //-         span Меню
+      //-       .mainTop__hideBoxClose
+      //-         i.icon-close2021
+      //-     .mainTop__hideBoxInnerContent.xScroll2
+      //-       .mainTop__hideBoxInnerContentInner
+      //-         +MenuBottom1__probl
 
 mixin topMenuBox
   ul.topMenuBox
