--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -18,10 +18,10 @@
 }
 
 @media only screen and (max-width: 768px) {
-  html,
+  /* html,
   body {
-    font-size: 12px;
-  }
+    font-size: 14px;
+  } */
   .toTop {
     position: fixed;
     left: auto;
