--- a/src/assets/css/__forms.css
+++ b/src/assets/css/__forms.css
@@ -5,6 +5,7 @@
 .zBlock1 {
   padding: 30px;
   background: var(--link1);
+  background: #a49693;
   display: flex;
   flex-direction: column;
 }
@@ -56,14 +57,14 @@ input.work_email1 {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   text-transform: uppercase;
-  border: 1px solid var(--tc0);
+  border: 1px solid #c24b35;
   line-height: 2rem;
   padding: 0 10px;
   outline: none;
   width: 30%;
   cursor: pointer;
   color: #fff;
-  background: var(--tc0);
+  background: #c24b35;
   transition: all 0.3s;
 }
 
