--- a/src/assets/css/__header2.css
+++ b/src/assets/css/__header2.css
@@ -167,9 +167,15 @@
 
 .header2__menuBtn {
   position: relative;
+  cursor: pointer;
 }
 
 .header2__menuBtn i {
   font-size: 4rem;
   color: var(--tc0);
+  transition: all 0.3s;
+}
+
+.header2__menuBtn:hover i {
+  color: #c24b35;
 }
