--- a/src/assets/css/__mainProblem_media.css
+++ b/src/assets/css/__mainProblem_media.css
@@ -8,6 +8,20 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .mainProblem {
+    margin: 5px -5px 0;
+  }
+
+  .mainProblem__itemOuter {
+    padding: 5px;
+  }
+  .mainProblem__itemInfo {
+    padding: 0 10px 0 10px;
+  }
+  .mainProblem__itemInfoTitle {
+    font-size: 1.375rem;
+    margin-bottom: 10px;
+  }
 }
 
 @media only screen and (max-width: 920px) {
@@ -17,55 +31,62 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .mainProblem {
-    margin: 5px -5px 0;
-  }
   .mainProblem__itemOuter {
-    padding: 5px;
+    width: 100%;
   }
-  .mainProblem__itemInfoTitle {
-    margin-bottom: 10px;
+  .mainProblem__itemImg {
+    width: 30%;
   }
-  .mainProblem__itemInfoUl li {
-    margin-bottom: 1px;
-  }
+
   .mainProblem__itemInfo {
-    padding: 0 10px 0 10px;
+    width: 70%;
   }
 }
 
 @media only screen and (max-width: 600px) {
+  .mainProblem__itemImg {
+    width: 40%;
+  }
+
   .mainProblem__itemInfo {
-    padding: 0 5px 0 5px;
-  }
-  .mainProblem__itemInfoTitle {
-    font-size: 1.25rem;
-    line-height: 1;
-    font-weight: 600;
-  }
-  .mainProblem__itemInfoUl li {
-    font-size: 0.875rem;
+    width: 60%;
   }
 }
 
 @media only screen and (max-width: 480px) {
-  .mainProblem__itemOuter {
-    width: 100%;
-    /* padding: 10px; */
-  }
   .mainProblem__itemInfo {
-    padding: 0 10px 0 10px;
+    padding: 10px;
+  }
+  .mainProblem__itemImg {
+    width: 50%;
+  }
+
+  .mainProblem__itemInfo {
+    width: 50%;
   }
   .mainProblem__itemInfoTitle {
-    font-size: 1.5rem;
-    line-height: 1.2;
+    font-size: 1.25rem;
+    margin-bottom: 5px;
   }
-  .mainProblem__itemInfoUl li {
-    font-size: 1rem;
-  }
+  /* .mainProblem__itemInfoContent {
+    display: none;
+  } */
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 414px) {
+  .mainProblem__itemInfo {
+    padding: 10px 5px;
+  }
+  .mainProblem__itemInfoTitle {
+    font-size: 1rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  .mainProblem__itemInfoContent li,
+  .mainProblem__itemInfoContent p {
+    font-size: 0.75rem;
+    margin-bottom: 0;
+  }
 }
 
 @media only screen and (max-width: 320px) {
