--- a/src/__services.pug
+++ b/src/__services.pug
@@ -8,6 +8,7 @@ mixin services
       .serv__wrapper
         +leftMenuSuperTree
         .servBox__outer
+          +mainProblem
           .serv
             .serv__itemOuter
               a.serv__item(href="#")
