--- a/src/assets/css/__mainProblem.css
+++ b/src/assets/css/__mainProblem.css
@@ -44,11 +44,11 @@
 
 .mainProblem__itemInfoTitle {
   font-size: 1.5rem;
-  margin-bottom: 20px;
   color: #000;
 }
 
 .mainProblem__itemInfoContent {
+  margin: 20px 0 0 0;
   font-size: 1rem;
   color: #000;
 }
