--- a/src/leftmenu.pug
+++ b/src/leftmenu.pug
@@ -7,6 +7,7 @@ include __const
 include __header2
 include __menu
 include __mainTop
+include __mainProblem
 include __breadcrumbs
 include __wideBlock
 include __services
@@ -30,7 +31,8 @@ body
 
   .site__center
     +breadcrumbs
-    //- +wideBlock
+    +wideBlock
+    
     +services
     +zBlock1
 
