--- a/src/assets/css/__mainProblem_media.css
+++ b/src/assets/css/__mainProblem_media.css
@@ -27,9 +27,15 @@
 }
 
 @media only screen and (max-width: 920px) {
+  .mainProblem__itemInfoTitle {
+    font-size: 1.25rem;
+  }
 }
 
 @media only screen and (max-width: 800px) {
+  .mainProblem__itemInfoTitle {
+    font-size: 1.125rem;
+  }
 }
 
 @media only screen and (max-width: 768px) {
