--- a/src/assets/css/__mainProblem.css
+++ b/src/assets/css/__mainProblem.css
@@ -42,9 +42,24 @@
   /* align-items: flex-end; */
 }
 
+.mainProblem__itemInfo_inPage {
+  width: 50%;
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px 0 20px;
+  /* align-items: flex-end; */
+}
+
 .mainProblem__itemInfoTitle {
   font-size: 1.5rem;
   color: #000;
+}
+
+.mainProblem__itemInfoTitle_small {
+  font-size: 1.125rem;
+  color: #000;
+  font-weight: 500;
 }
 
 .mainProblem__itemInfoContent {
