--- a/src/assets/css/__procedure.css
+++ b/src/assets/css/__procedure.css
@@ -24,6 +24,12 @@
   justify-content: space-between;
 }
 
+.procedure__introLinks {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
 .procedure__introImg__outer {
   width: 45%;
 }
@@ -62,23 +68,25 @@
   font-size: 1rem;
   line-height: 1.3;
   color: var(--tc0);
-  background: var(--x1greySuperLight);
+  background: var(--x1greyLight);
   transition: all 0.3s;
 }
 .procedure__master:hover {
-  background: var(--x1greyLight);
+  background: #6a6e79;
+  color: #fff;
 }
 
 .link1 {
   font-size: 1.125rem;
   color: var(--link1);
   transition: all 0.3s;
-  margin-top: auto;
   font-weight: 600;
-  margin-top: 30px;
 }
 .link1:hover {
   color: var(--link1hov);
+}
+.link1:first-child {
+  margin-top: auto;
 }
 
 .procedure__longContent {
@@ -125,12 +133,13 @@
 }
 
 .priceBox table tr {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid #f3f2f2;
 }
 
 .priceBox table td {
   padding: 10px;
-  background: var(--x1greySuperLight);
+  /* background: var(--x1greySuperLight); */
+  background: var(--x1greyLight);
   font-size: 1rem;
   color: var(--tc0);
 }
