--- a/src/__mainProblem.pug
+++ b/src/__mainProblem.pug
@@ -14,6 +14,48 @@ mixin mainProblem
                   li Морщины
                   li Подтяжка 
                   li Контур лица
+            .innerPriceBtn ₽
+            .innerPriceBox__wrapper
+              .innerPriceBox__overlay 
+                .innerPriceBox.colorBox_e
+                  .innerPriceBox__header
+                    .innerPriceBox__title Лазерная эпиляция Candela
+                    .innerPriceBox__close
+                      i.icon-close2021
+                  .innerPriceBox__content.xScroll2 
+                    .priceBox2__area
+                      .priceBox__title
+                        h3 Название прайса
+                      .priceBox
+                        table
+                          tbody
+                            tr
+                              td Лазерная эпиляция: подбородок
+                              td 1900 руб.
+                            tr
+                              td Лазерная эпиляция: щеки
+                              td 2900 руб.
+                            tr
+                              td Лазерная эпиляция: верхняя губа
+                              td 1000 руб.
+                            tr
+                              td Лазерная эпиляция: лицо полностью
+                              td 4800 руб.
+                            tr
+                              td Лазерная эпиляция: подбородок
+                              td 1900 руб.
+                            tr
+                              td Лазерная эпиляция: щеки
+                              td 2900 руб.
+                            tr
+                              td Лазерная эпиляция: верхняя губа
+                              td 1000 руб.
+
+          
+
+
+
+
         .mainProblem__itemOuter
           a.mainProblem__item(href="")
             .mainProblem__itemImg
