--- a/src/assets/css/__procedure_media.css
+++ b/src/assets/css/__procedure_media.css
@@ -20,6 +20,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .procedure__intro {
+    margin-top: 0;
+  }
   .procedure__introImg__outer {
     order: 0;
     width: 100%;
