--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -40,10 +40,17 @@ body {
   align-items: center;
 }
 
-.title1:after {
+.title1margin0 {
+  position: relative;
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.title1:after,
+.title1margin0:after {
   content: "";
   height: 1px;
-  /* margin-right: 15px; */
   margin-left: 15px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -55,6 +62,12 @@ body {
 .title1 h1,
 .title1 h2,
 .title1 h3 {
+  margin: 0;
+}
+
+.title1margin0 h1,
+.title1margin0 h2,
+.title1margin0 h3 {
   margin: 0;
 }
 
