--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -52,7 +52,31 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 414px) {
+  h1 {
+    font-size: 1.5rem;
+    text-transform: capitalize;
+  }
+
+  h2 {
+    font-size: 1.375rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+  }
+
+  h5 {
+    font-size: 1rem;
+  }
+
+  h6 {
+    font-size: 0.875rem;
+  }
 }
 
 @media only screen and (max-width: 320px) {
