--- a/src/assets/css/__header2_media.css
+++ b/src/assets/css/__header2_media.css
@@ -76,7 +76,10 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 414px) {
+  .topLine2__address {
+    font-size: 0.625rem;
+  }
 }
 
 @media only screen and (max-width: 320px) {
