--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -77,6 +77,9 @@
   h6 {
     font-size: 0.875rem;
   }
+  .content__outer {
+    padding: 10px 0;
+  }
 }
 
 @media only screen and (max-width: 320px) {
