--- a/src/assets/css/__menu_media.css
+++ b/src/assets/css/__menu_media.css
@@ -123,7 +123,21 @@
 @media only screen and (max-width: 480px) {
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 414px) {
+  .leftMenu li.lev1 > .lev_a_wrapper a {
+    padding: 0.625rem 3.625rem 0.625rem 0.625rem;
+  }
+  .leftMenu li.lev1 > .lev_a_wrapper > .openInner {
+    width: 3rem;
+  }
+
+  .leftMenu li.lev2 > .lev_a_wrapper a {
+    padding: 0.625rem 3.625rem 0.625rem 0.625rem;
+  }
+
+  .leftMenu li.lev2 > .lev_a_wrapper > .openInner {
+    width: 3rem;
+  }
 }
 
 @media only screen and (max-width: 320px) {
