--- a/src/__procedure2.pug
+++ b/src/__procedure2.pug
@@ -10,9 +10,18 @@ mixin procedure2__intro
         p Всего за несколько сеансов можно навсегда распрощаться с нежелательными волосами.
       a.link1#goToPriceAnchor(href="#") Перейти к ценам
     .procedure__introImg__outer
-      .procedure__introImg
-        img(src="assets/img/temp/001.png", alt="")
+      //- .procedure__introImg
+      //-   img(src="assets/img/temp/001.png", alt="")
+      .procedure__introImg.videoBox.videoBox_i
+        iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+        //- iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8?&autoplay=1' frameborder='0' allowfullscreen='')
+        //- iframe(width='560' height='315' src='https://www.youtube.com/embed/NnHkWF3AeKs' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
+
+      //- .procedure__introImg.videoBox.videoBox_i
+      //-   iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+
+ 
 mixin procedure
   .procedure__area.w0
     .procedure__outer.w1
