--- a/src/assets/css/__procedure_media.css
+++ b/src/assets/css/__procedure_media.css
@@ -35,10 +35,10 @@
   .procedure__introImg {
     padding: 10px 0;
   }
-  .procedure__introLinks {
+  /* .procedure__introLinks {
     flex-direction: row;
     flex-wrap: wrap;
-  }
+  } */
   .link1 {
     margin: 2px 10px 2px 0;
     display: inline-block;
@@ -46,6 +46,17 @@
 }
 
 @media only screen and (max-width: 480px) {
+  .priceBox table td {
+    padding: 5px;
+  }
+
+  .priceBox table td:nth-child(1) {
+    width: 70%;
+  }
+
+  .priceBox table td:nth-child(2) {
+    width: 30%;
+  }
 }
 
 @media only screen and (max-width: 414px) {
